--- a/core_admin/common/templates/notification_skybot_abort.html
+++ b/core_admin/common/templates/notification_skybot_abort.html
@@ -51,12 +51,12 @@
                                             <tr>
                                                 <td
                                                     style="font-family:arial,Arial,sans-serif;font-size:16px;line-height:18px;letter-spacing:0px;color:#777;text-decoration:none; padding-left: 10px;">
-                                                    your <spam style="font-weight: bold;"> Skybot Job </spam> has been
+                                                    your <span style="font-weight: bold;"> Skybot Job </span> has been
                                                     aborted. you can check it out by accessing the link below.
                                                     </br>
                                                     <a style="text-decoration: none"
-                                                        href={{host_url}}/data-preparation/des/skybot/{{job_id}} />
-                                                    <spam>{{host_url}}/data-preparation/des/skybot/{{job_id}}</spam>
+                                                        href={{host_url}}/data-preparation/des/skybot/{{job_id}}>
+                                                    <span>{{host_url}}/data-preparation/des/skybot/{{job_id}}</span>
                                                     </a>
                                                 </td>
                                             </tr>
