--- a/core_admin/templates/rest_framework/login.html
+++ b/core_admin/templates/rest_framework/login.html
@@ -1,88 +1,156 @@
 {% extends "rest_framework/login_base.html" %}
+
+{% load staticfiles %}
+{% load static %}
+
 {% block title %}Small Solar System Objects{% endblock %}
+
+{% block style %}
+{% block bootstrap_theme %}
+<link rel="stylesheet" type="text/css" href="{% static "rest_framework/css/bootstrap.min.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "rest_framework/css/bootstrap-tweaks.css" %}" />
+{% endblock %}
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap">
+<link rel="stylesheet" type="text/css" href="{% static "rest_framework/css/prettify.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "rest_framework/css/default.css" %}" />
+
+<link rel="stylesheet" type="text/css" href="{% static "rest_framework/css/login.css" %}" />
+{% endblock %}
 
 {% block body %}
 
-<body class="container">
-    <div class="container-fluid" style="margin-top: 30px">
-        <div class="row-fluid">
-            <div class="well" style="width: 360px; margin-left: auto; margin-right: auto">
-                <div class="row-fluid">
-                    <div>
-                        {% block branding %}
-                        <h3 style="margin: 0 0 20px;">Small Solar System Objects</h3>
+<body>
+  <div class="MuiGrid-container">
+    <div class="MuiGrid-item MuiGrid-xs-12">
+      <div id="header">
+        <h2 class="title MuiTypography-h1">SSSO Portal</h2>
+      </div>
+    </div>
 
-                        {% endblock %}
-                    </div>
-                </div><!-- /row fluid -->
+    <div class="MuiGrid-item MuiGrid-xs-12">
+      <main class="MuiContainer-root MuiContainer-maxWidthXs">
 
-                <div class="row-fluid">
-                    <div>
-                        <form action="{% url 'rest_framework:login' %}" role="form" method="post">
-                            {% csrf_token %}
-                            <input type="hidden" name="next" value="{{ next }}" />
 
-                            <div id="div_id_username"
-                                class="clearfix control-group {% if form.username.errors %}error{% endif %}">
-                                <div class="form-group">
-                                    <label for="id_username">Username:</label>
-                                    <input type="text" name="username" maxlength="100" autocapitalize="off"
-                                        autocorrect="off" class="form-control textinput textInput" id="id_username"
-                                        required {% if form.username.value %}value="{{ form.username.value }}"
-                                        {% endif %}>
-                                    {% if form.username.errors %}
-                                    <p class="text-error">
-                                        {{ form.username.errors|striptags }}
-                                    </p>
-                                    {% endif %}
-                                </div>
-                            </div>
+        <div class="paper">
+          <div class="MuiAvatar-root sign-in-avatar MuiAvatar-colorDefault">
+            <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+              <path
+                d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zM9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9V6zm9 14H6V10h12v10zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z">
+              </path>
+            </svg>
+          </div>
 
-                            <div id="div_id_password"
-                                class="clearfix control-group {% if form.password.errors %}error{% endif %}">
-                                <div class="form-group">
-                                    <label for="id_password">Password:</label>
-                                    <input type="password" name="password" maxlength="100" autocapitalize="off"
-                                        autocorrect="off" class="form-control textinput textInput" id="id_password"
-                                        required>
-                                    {% if form.password.errors %}
-                                    <p class="text-error">
-                                        {{ form.password.errors|striptags }}
-                                    </p>
-                                    {% endif %}
-                                </div>
-                            </div>
+          <h1 class="MuiTypography-root MuiTypography-h5">Sign in</h1>
 
-                            {% if form.non_field_errors %}
-                            {% for error in form.non_field_errors %}
-                            <div class="well well-small text-error" style="border: none">{{ error }}</div>
-                            {% endfor %}
-                            {% endif %}
+          <form action="{% url 'rest_framework:login' %}" role="form" method="post" class="form-login">
+            {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next }}" />
 
-                            <div class="form-actions-no-box">
-                                <input type="submit" name="submit" value="Log in" class="btn btn-primary form-control"
-                                    id="submit-id-submit">
+            <!-- <div id="div_id_username" class="clearfix control-group {% if form.username.errors %}error{% endif %}">
+              <div class="form-group">
+                <label for="id_username">Username:</label>
+                <input type="text" name="username" maxlength="100" autocapitalize="off" autocorrect="off"
+                  class="form-control textinput textInput" id="id_username" required
+                  {% if form.username.value %}value="{{ form.username.value }}" {% endif %}>
+                {% if form.username.errors %}
+                <p class="text-error">
+                  {{ form.username.errors|striptags }}
+                </p>
+                {% endif %}
+              </div>
+            </div> -->
 
-                            </div>
+            <!-- <div id="div_id_password" class="clearfix control-group {% if form.password.errors %}error{% endif %}">
+              <div class="form-group">
+                <label for="id_password">Password:</label>
+                <input type="password" name="password" maxlength="100" autocapitalize="off" autocorrect="off"
+                  class="form-control textinput textInput" id="id_password" required>
+                {% if form.password.errors %}
+                <p class="text-error">
+                  {{ form.password.errors|striptags }}
+                </p>
+                {% endif %}
+              </div>
+            </div> -->
 
-                            {% if settings.AUTH_SHIB_URL is not None%}
-                            <div style="padding-top:5px;">
-                                <a href="{{ settings.AUTH_SHIB_URL }}" class="btn btn-info btn-block">Login
-                                    Institucional</a>
-                            </div>
-                            {% endif %}
-
-                            <!--Exibir todas as variaveis de settings diponiveis para os templates.              -->
-                            <!--Essas variaveis estao no settings na sessao SETTINGS_EXPORT-->
-                            <!-- {% for key, value in settings.items %} -->
-                            <!-- {{ key }}: {{ value }} -->
-                            <!-- {% endfor %} -->
-                        </form>
-                    </div>
-                </div><!-- /.row-fluid -->
+            <div id="div_id_username" class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth">
+              <label
+                class="MuiFormLabel-root {% if form.username.errors %} Mui-error {% endif %} MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
+                data-shrink="true" for="id_username" id="username-label">Username<span aria-hidden="true"
+                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"> *</span></label>
+              <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl">
+                <input id="id_username" name="username" required type="text"
+                  class="MuiInputBase-input MuiOutlinedInput-input {% if form.username.errors %} Mui-error {% endif %}" maxlength="100" autocapitalize="off"
+                  autocorrect="off" {% if form.username.value %}value="{{ form.username.value }}" {% endif %}>
+                <fieldset aria-hidden="true" class="PrivateNotchedOutline-root-223 MuiOutlinedInput-notchedOutline">
+                  <legend class="PrivateNotchedOutline-legendLabelled-225 PrivateNotchedOutline-legendNotched-226">
+                    <span>Username&nbsp;*</span></legend>
+                </fieldset>
+              </div>
+              {% if form.username.errors %}
+              <p class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled" id="outlined-error-helper-text-helper-text">
+                {{ form.username.errors|striptags }}
+              </p>
+              {% endif %}
             </div>
-            <!--/.well-->
-        </div><!-- /.row-fluid -->
-    </div><!-- /.container-fluid -->
+
+
+            <div id="div_id_password" class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth">
+              <label
+                class="MuiFormLabel-root {% if form.password.errors %} Mui-error {% endif %} MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
+                data-shrink="true" for="id_password" id="password-label">Password<span aria-hidden="true"
+                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"> *</span></label>
+              <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl">
+                <input maxlength="100" autocapitalize="off" autocorrect="off" id="id_password"
+                  name="password" required type="password" class="MuiInputBase-input MuiOutlinedInput-input {% if form.password.errors %} Mui-error {% endif %}">
+                <fieldset aria-hidden="true" class="PrivateNotchedOutline-root-223 MuiOutlinedInput-notchedOutline">
+                  <legend class="PrivateNotchedOutline-legendLabelled-225 PrivateNotchedOutline-legendNotched-226">
+                    <span>Password&nbsp;*</span></legend>
+                </fieldset>
+              </div>
+              {% if form.password.errors %}
+              <p class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled" id="outlined-error-helper-text-helper-text">
+                {{ form.password.errors|striptags }}
+              </p>
+              {% endif %}
+            </div>
+
+
+            {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+            <div class=Mui-error" style="border: none">{{ error }}</div>
+            {% endfor %}
+            {% endif %}
+
+            <!-- <div class="form-actions-no-box"> -->
+            <!-- <input type="submit" name="submit" value="Log in" class="btn btn-primary form-control"
+                id="submit-id-submit"> -->
+
+
+            <button
+              class="MuiButtonBase-root MuiButton-root MuiButton-contained login-submit MuiButton-containedPrimary MuiButton-fullWidth"
+              tabindex="0" type="submit"><span class="MuiButton-label">Sign In</span><span
+                class="MuiTouchRipple-root"></span></button>
+            <!-- </div> -->
+
+            {% if settings.AUTH_SHIB_URL is not None%}
+            <a href="{{ settings.AUTH_SHIB_URL }}"
+              class="MuiButtonBase-root MuiButton-root MuiButton-contained login-submit-shibboleth MuiButton-containedPrimary MuiButton-fullWidth"
+              tabindex="0" type="submit">Institutitonal Sign In</a>
+            {% endif %}
+
+            <!--Exibir todas as variaveis de settings diponiveis para os templates.              -->
+            <!--Essas variaveis estao no settings na sessao SETTINGS_EXPORT-->
+            <!-- {% for key, value in settings.items %} -->
+            <!-- {{ key }}: {{ value }} -->
+            <!-- {% endfor %} -->
+          </form>
+        </div>
+      </main>
+
+    </div>
+  </div>
 </body>
 {% endblock %}
