--- a/core_admin/templates/rest_framework/login.html
+++ b/core_admin/templates/rest_framework/login.html
@@ -131,7 +131,7 @@
 
             <button
               class="MuiButtonBase-root MuiButton-root MuiButton-contained login-submit MuiButton-containedPrimary MuiButton-fullWidth"
-              tabindex="0" type="submit"><span class="MuiButton-label">Sign In</span><span
+              tabindex="0" type="submit" name="submit" value="Log in"><span class="MuiButton-label">Sign In</span><span
                 class="MuiTouchRipple-root"></span></button>
             <!-- </div> -->
 
