--- a/core_admin/common/templates/notification_skybot_start.html
+++ b/core_admin/common/templates/notification_skybot_start.html
@@ -78,10 +78,14 @@
                                 <td>#Nights:</td>
                                 <td>{{nights}}</td>
                               </tr>
-                              <tr>
-                                <td>#CCDs:</td>
+                              <tr style="background-color: #f2f2f2;">
+                                <td>#Exposures:</td>
+                                <td>{{exposures}}</td>
+                            </tr>
+                            <tr style="background-color: #f2f2f2;">
+                                <td>#CCDs Analyzed:</td>
                                 <td>{{ccds}}</td>
-                              </tr>
+                            </tr>
                             </tbody>
                           </table>
                         </td>
