Validation: fixing bugs e refactoring code

--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -47,6 +47,6 @@ code.hljs.sql {
   margin: auto;
 }
 
-.MuiCardActionArea-root {
+/* .MuiCardActionArea-root {
   display: contents!important;
-}
+} */
