--- a/frontend/src/components/Date/styles.css
+++ b/frontend/src/components/Date/styles.css
@@ -1,5 +1,4 @@
-
-.rdrCalendarWrapper {
+.rdrCalendarWrapper, .rdrDateRangePickerWrapper {
   width: 100%;
   max-width: 100%;
 }
@@ -14,4 +13,12 @@
 
 .rdrMonth {
   width: 100%;
+}
+
+
+
+@media screen and (min-width: 992px) and (max-width: 2167px) {
+  .rdrDateRangePickerWrapper {
+    margin: 0 -16px;
+  }
 }
