--- a/frontend/src/pages/PredictOccultation/predict.css
+++ b/frontend/src/pages/PredictOccultation/predict.css
@@ -11,3 +11,8 @@
 .cardBoder{
     border: 1px solid #e6e5e5;
 }
+
+.buttonFilter{
+    min-width: 150px !important;
+    margin-top: 15px !important;
+}
