Changed old domain .gov.br to .org.br

--- a/backend/templates/rest_framework/login.html
+++ b/backend/templates/rest_framework/login.html
@@ -373,13 +373,13 @@
         <p>
           In case you have any problem authenticating or registering, please
           <strong
-            ><a href="mailto:helpdesk@linea.gov.br" target="_blank">contact our helpdesk</a></strong
+            ><a href="mailto:helpdesk@linea.org.br" target="_blank">contact our helpdesk</a></strong
           >.
         </p>
         <p>
           You must read, agree with, and accept all of the
           <strong
-            ><a href="https://identity.linea.gov.br/terms.html" target="_blank"
+            ><a href="https://identity.linea.org.br/terms.html" target="_blank"
               >terms and conditions</a
             ></strong
           >.
