--- a/frontend/src/pages/OrbitTrace/orbittrace.css
+++ b/frontend/src/pages/OrbitTrace/orbittrace.css
@@ -1,4 +1,10 @@
-.buttonFilter{
+.buttonFilter {
     min-width: 150px !important;
     margin-top: 15px !important;
+}
+
+.MuiIconButton-root {
+    padding: 0px !important;
+    padding-bottom: 2px !important;
+    padding-left: 4px !important;
 }
