--- a/frontend/src/pages/OrbitTrace/orbittrace.css
+++ b/frontend/src/pages/OrbitTrace/orbittrace.css
@@ -3,8 +3,13 @@
     margin-top: 15px !important;
 }
 
-.MuiIconButton-root {
+/* .MuiIconButton-root {
     padding: 0px !important;
     padding-bottom: 2px !important;
     padding-left: 4px !important;
+} */
+
+.label-tooltip-margin{
+    margin-bottom: -10px;
+    margin-top: -14px;
 }
