--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   overflow-x: hidden;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -43,10 +43,11 @@ code.hljs.sql {
 .js-plotly-plot .plot-container.plotly .svg-container {
   width: 100% !important;
   /* height: 'auto' !important; */
-  /* min-height: 400px; */
-  margin: auto;
+/* min-height: 400px; */
+margin: auto;
 }
 
 /* .MuiCardActionArea-root {
   display: contents!important;
 } */
+*/
