--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -1,4 +1,4 @@
-/* body {
+ body {
   margin: 0;
   overflow-x: hidden;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -8,7 +8,7 @@
   background: #f4f4f4;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
@@ -44,10 +44,7 @@ code.hljs.sql {
   width: 100% !important;
   /* height: 'auto' !important; */
 /* min-height: 400px; */
-margin: auto;
-}
 
 /* .MuiCardActionArea-root {
   display: contents!important;
 } */
-*/
