--- a/backend/newsletter/templates/welcome.html
+++ b/backend/newsletter/templates/welcome.html
@@ -213,7 +213,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: left;color:#212121;  height: 30px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">Greetings,
+                        <div style="font-family:Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: left;color:#212121;  height: 30px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">{{nome}},
                         </div>
                     </td>
                 </tr>
