--- a/backend/newsletter/templates/welcome.html
+++ b/backend/newsletter/templates/welcome.html
@@ -1,3 +1,4 @@
+{% load rest_framework %}
 <!doctype html>
 <html>
 
@@ -6,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IEedge"><!--<![endif]-->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=3Ddevice-width,initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium|Roboto:300,400,500,700&display=swap"/>
     <style type="text/css">
         #outlook a {
             padding: 0;
@@ -158,7 +163,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:600px; padding: 10px; background-color: #212121;"><img style="width: 70px;" src="https://solarsystem.linea.org.br/img/tno_logo_projetos.png" alt="">
+                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:600px; padding: 10px; background-color: #0076BC;"><img style="width: 70px;" src="https://solarsystem.linea.org.br/img/tno_logo_projetos.png" alt="">
                         </div>
                     </td>
                 </tr>
@@ -171,7 +176,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px; width:600px; padding: 10px; background-color: #212121;">LIneA Occultation Prediction Database
+                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px; width:600px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
                         </div>
                     </td>
                 </tr>
@@ -184,7 +189,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Helvetica;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 70px; width:600px; padding: 10px; background-color: #0076BC;">This is a database of predictions for stellar occultations by small <br> Solar System objects, calculated from the legacy
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 70px; width:600px; padding: 10px; background-color: #0076BC;">This is a database of predictions for stellar occultations by small <br> Solar System objects, calculated from the legacy
                             positions provided <br> by the Dark Energy Survey (DES) and the constantly updated <br> positions from the Minor Planet Center (MPC).
                             These predictions are <br> regularly updated. Use our advanced filters to refine your search and <br> find more suitable events.
                         </div>
@@ -213,7 +218,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: left;color:#212121;  height: 30px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">{{nome}},
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:bold;text-align: left;color: rgb(79, 78, 78);  height: 30px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">Greetings,
                         </div>
                     </td>
                 </tr>
@@ -226,7 +231,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 50px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                        <div style="text-align: center;color:#E5E5E5;  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
                         </div>
                     </td>
                 </tr>
@@ -240,7 +245,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;font-size:19px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Personalize your experience with our occultation prediction database!
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Customize your experience with our occultation prediction database!
                         </strong>
                         </div>
                     </td>
@@ -250,12 +255,13 @@
     </div><!-- Termina agradecimento--> 
     <!-- paragrafo 1 -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
+        <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:18px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:600px; padding: 10px; background-color: #F4F4F4;">Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies. With millions of events occurring annually, you can customize your subscription to align with your specific interests and geographic location. Take the opportunity to explore the cosmos with us by
-                            <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies. With millions of events occurring annually, you can customize your subscription to align with your specific interests and geographic location. Take the opportunity to explore the cosmos with us by
+                            <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a> <br> 
+                            <!--*** Aqui vem print da tela com formulario e instrucoes-->
                         </div>
                     </td>
                 </tr>
@@ -281,10 +287,25 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <hr style="color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:15px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">Click here to <a href="#" style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a> 
+                        <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                            If you no longer wish to receive our emails, click here to <a href="#" style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a> 
+                            <!--
+                            <form action="" method="post">
+                                <label for="obj">Enter your email:</label>
+                                <input type="url" id="obj" name="obj" >
+                                <br><br>
+                                -->
+                                <!--
+                                
+                                <button type="submit" name="subscribe">Subscribe</button>
+                                
+                                <button style="border: none; background-color: white; color: red; cursor: pointer;" type="submit" name="unsubscribe">Unsubscribe</button>
+                            </form>
+                            <a href="http://127.0.0.1:8000/api/subscription/unsubscribe/?c=5936fd61-ce73-4a64-b62b-7880df55d3c0" style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a> 
+                            -->
                         </div>
-                        <hr style="color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
+                        <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
                     </td>
                 </tr>
             </tbody>
@@ -298,7 +319,7 @@
                 <tr>
                     <td style="width:100px;">
                         <div style="text-align: center;color: rgb(79, 78, 78);  height: 76px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <span style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:15px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78); width:600px; padding: 10px; background-color: #F4F4F4;">LIneA is supported by</span><br>
+                            <span style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:15px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78); width:600px; padding: 10px; background-color: #F4F4F4;">LIneA is supported by</span><br>
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/capes.png" alt="">
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/cnpq.png" alt="">
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/faperj.png" alt="">
@@ -316,7 +337,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 35px; width:600px; padding: 10px; background-color: #212121;">Powered by
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow', Arial, sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 35px; width:600px; padding: 10px; background-color: #0076BC;">Powered by
                         <a href="http://www.linea.org.br/"><img style="width: 50px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
                         </div>
                     </td>
