--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
-
 <head>
     <title></title><!--[if !mso]>-->
     <meta http-equiv="X-UA-Compatible" content="IEedge"><!--<![endif]-->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=3Ddevice-width,initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium|Roboto:300,400,500,700&display=swap"/>
     <style type="text/css">
         #outlook a {
             padding: 0;
@@ -158,7 +161,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:600px; padding: 10px; background-color: #212121;"><img style="width: 70px;" src="https://solarsystem.linea.org.br/img/tno_logo_projetos.png" alt="">
+                        <div style="font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:600px; padding: 10px; background-color: #0076BC;"><img style="width: 70px;" src="https://solarsystem.linea.org.br/img/tno_logo_projetos.png" alt="">
                         </div>
                     </td>
                 </tr>
@@ -171,7 +174,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px; width:600px; padding: 10px; background-color: #212121;">LIneA Occultation Prediction Database
+                        <!--<div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px; width:600px; padding: 10px; background-color: #212121;">LIneA Occultation Prediction Database-->
+                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px; width:600px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
                         </div>
                     </td>
                 </tr>
@@ -184,7 +188,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Helvetica;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 70px; width:600px; padding: 10px; background-color: #0076BC;">This is a database of predictions for stellar occultations by small <br> Solar System objects, calculated from the legacy
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 70px; width:600px; padding: 10px; background-color: #0076BC;">This is a database of predictions for stellar occultations by small <br> Solar System objects, calculated from the legacy
                             positions provided <br> by the Dark Energy Survey (DES) and the constantly updated <br> positions from the Minor Planet Center (MPC).
                             These predictions are <br> regularly updated. Use our advanced filters to refine your search and <br> find more suitable events.
                         </div>
@@ -213,7 +217,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color:#212121;  height: 40px; width:600px; padding: 10px; background-color: #F4F4F4;">Your customized occultation predicitions for [Semester Year/Month Year/Week Month Year]
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color:#212121;  height: 40px; width:600px; padding: 10px; background-color: #F4F4F4;">Your customized occultation predicitions for [Semester Year/Month Year/Week Month Year]
                         </div>
                     </td>
                 </tr>
@@ -240,7 +244,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Dear [Subscriber],
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Dear [Subscriber],
                         </strong>
                         </div>
                     </td>
@@ -249,12 +253,12 @@
         </table> <!--https://tno-dev.linea.org.br/prediction-event-detail/322829-->
     </div><!-- Termina agradecimento--> 
     <!-- paragrafo 1 -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
+    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto; max-width:600px;">
+        <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:600px; padding: 10px; background-color: #F4F4F4;">We trust this message finds you well. We are happy to provide you with your customized occultation predictions for the upcoming period. Besides the partial events listed below, you'll find attached a CSV file containing comprehensive information about each event. We look forward to further assisting you as you delve into the intricacies of stellar occultation phenomena while exploring the Solar System. <br><br>Should you wish to adjust your filter parameters, you can do so
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 30px; width:570px; padding: 10px; background-color: #F4F4F4;">We are happy to provide you with your customized occultation predictions for the upcoming period. Besides the partial events listed below, you'll find attached a CSV file containing comprehensive information about each event. We look forward to further assisting you as you delve into the intricacies of stellar occultation phenomena while exploring the Solar System. <br><br>Should you wish to adjust your filter parameters, you can do so
                             <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">[HERE].</a><br><br>Yours sincerely,<br>
                             LIneA Team
                         </div>
@@ -288,7 +292,7 @@
                                     <tbody>
                                         <tr>
                                             <td style="width:100px;">
-                                                <div style="font-family:Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px; width:200px; padding: 10px;border-radius:10px; background-color: #0076BC;">Events
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px;  padding: 10px;border-radius:0px; background-color: #0076BC;">Aqui vai uma tabela com os links dos dados
                                                 </div>
                                             </td>
                                         </tr>
@@ -307,45 +311,31 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 150px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                        <div style="text-align: center;color:#E5E5E5;  height: 130px; width:600px; padding: 10px; background-color: #F4F4F4;">
                              <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255); height:150px ;width:100%;">
                                     <tbody>
                                         <tr>
-                                            <td style="width:70px;"> <!-- card com mapa 1 -->
-                                                <div style="text-align:start ;color:#E5E5E5; width: 20px;">
-                                                <img style="width: 100px;" src="https://tno-dev.linea.org.br/data/maps/2020OD8-20241109103917.jpg" alt="">  
-                                                </div>
-                                            </td>
-                                            <td style="width:50px;"> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:left ;color:#212121; font-size: 10px;">
-                                                    2013 GY252 <br>2024-03-18 13:27:09 <br>Trojan <br>G (Gaia) 13 400 <br> 
+                                            <td style=> <!-- card com descricao do mapa 1 -->
+                                                <div style="text-align:center ;color:#212121; font-size: 10px;">
+                                                    2013 GY252 2024-03-18 13:27:09 Trojan G (Gaia) 13 400  <a style="text-align: center; text-decoration: none;font-size: 10px;" href="#">MORE</a>
                                                     <!--{{ Ano tipo }} <br>{{ data }} <br>{{ Categoria }} <br>{{ nome numero }} <br>  -->
+                                                    <br><br>
                                                 </div>
-                                                <div><a style="text-align: center; text-decoration: none;font-size: 10px;" href="#">MORE</a></div>
-                                            </td>
-                                            <td style="width:40px;"> <!-- card com mapa 2 -->
-                                                <div style="text-align:center ;color:#E5E5E5;">
-                                                    <img style="width: 100px;" src="https://tno-dev.linea.org.br/data/maps/2020OD8-20241116012839.jpg" alt="">  
-                                                </div>
-                                            </td>
-                                            <td style="width:50px;"> <!-- card com descricao do mapa 2 -->
-                                                <div style="text-align:left ;color:#212121; font-size: 10px;">
-                                                    2013 GY252 <br>2024-03-18 13:27:09 <br>Trojan <br>G (Gaia) 13 400 <br> 
+                                                <div style="text-align:center ;color:#212121; font-size: 10px;">
+                                                    2013 GY252 2024-03-18 13:27:09 Trojan G (Gaia) 13 400  <a style="text-align: center; text-decoration: none;font-size: 10px;" href="#">MORE</a>
                                                     <!--{{ Ano tipo }} <br>{{ data }} <br>{{ Categoria }} <br>{{ nome numero }} <br>  -->
+                                                    <br><br>
                                                 </div>
-                                                <div><a style="text-align: center; text-decoration: none;font-size: 10px;" href="#">MORE</a></div>
-                                            </td>
-                                            <td style="width:50px;"> <!-- card com mapa 3 -->
-                                                <div style="text-align:center ;color:#E5E5E5;">
-                                                    <img style="width: 100px;" src="https://tno-dev.linea.org.br/data/maps/2020OD8-20241228041208.jpg" alt="">  
-                                                </div>
-                                            </td>
-                                            <td style="width:50px;"> <!-- card com descricao do mapa 3 -->
-                                                <div style="text-align:left ;color:#212121; font-size: 10px;">
-                                                    2013 GY252 <br>2024-03-18 13:27:09 <br>Trojan <br>G (Gaia) 13 400 <br> 
+                                                <div style="text-align:center ;color:#212121; font-size: 10px;">
+                                                    2013 GY252 2024-03-18 13:27:09 Trojan G (Gaia) 13 400  <a style="text-align: center; text-decoration: none;font-size: 10px;" href="#">MORE</a>
                                                     <!--{{ Ano tipo }} <br>{{ data }} <br>{{ Categoria }} <br>{{ nome numero }} <br>  -->
+                                                    <br><br>
                                                 </div>
-                                                <div><a style="text-align: center; text-decoration: none; font-size: 10px;" href="#">MORE</a></div>
+                                                <div style="text-align:center ;color:#212121; font-size: 10px;">
+                                                    2013 GY252 2024-03-18 13:27:09 Trojan G (Gaia) 13 400  <a style="text-align: center; text-decoration: none;font-size: 10px;" href="#">MORE</a>
+                                                    <!--{{ Ano tipo }} <br>{{ data }} <br>{{ Categoria }} <br>{{ nome numero }} <br>  -->
+                                                    <br><br>
+                                                </div>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -362,10 +352,10 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <hr style="color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:15px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">Click here to <a href="#" style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a> 
+                        <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">If you no longer wish to receive our emails, click here to <a href="#" style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a> 
                         </div>
-                        <hr style="color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
+                        <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
                     </td>
                 </tr>
             </tbody>
@@ -379,7 +369,7 @@
                 <tr>
                     <td style="width:100px;">
                         <div style="text-align: center;color: rgb(79, 78, 78);  height: 76px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <span style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:15px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78); width:600px; padding: 10px; background-color: #F4F4F4;">LIneA is supported by</span><br>
+                            <span style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:15px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78); width:600px; padding: 10px; background-color: #F4F4F4;">LIneA is supported by</span><br>
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/capes.png" alt="">
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/cnpq.png" alt="">
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/faperj.png" alt="">
@@ -397,7 +387,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:monospace, 'Arial Narrow', Arial, sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 35px; width:600px; padding: 10px; background-color: #212121;">Powered by
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 35px; width:600px; padding: 10px; background-color: #0076BC;">Powered by
                         <a href="http://www.linea.org.br/"><img style="width: 50px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
                         </div>
                     </td>
